--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
                     </div>
                     <div class="modal-body">
                         <div class="container-fluid row">
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#vba"
+                                href="#">Stock Analysis (VBA-Project)</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#leaflet" href="#">Leaflet-Projects</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
@@ -187,26 +189,30 @@
                                 href="#">heroesmemorygame</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">VBA-Scripting</a> -->
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql" href="#">SQL-Projects</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
+                                href="#">SQL-Projects</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                            data-bs-target="#tableau" href="#">Tableau-Project</a>
+                                data-bs-target="#tableau" href="#">Tableau-Project</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">SpiritualEngineering</a> -->
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">JavaScript-Projects</a> -->
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web" href="#">Web-Design-Projects</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup" href="#">Mission_to_Jupiter</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
+                                href="#">Web-Design-Projects</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
+                                href="#">Mission_to_Jupiter</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Password-Generator</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">FriendFinder</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                            data-bs-target="#gamazon" href="#">Gamazon</a>
+                                data-bs-target="#gamazon" href="#">Gamazon</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">realnewslinks</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">HYBC</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">New-York-Times-API</a> -->
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri" href="#">liri-node-app</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri"
+                                href="#">liri-node-app</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">WeatherForecast</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">GifTastic</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Calender</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                            data-bs-target="#burger" href="#">crudaburger</a>
+                                data-bs-target="#burger" href="#">crudaburger</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">porfolio</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">NodeGuessGame</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">TrainScheduler</a>
@@ -217,6 +223,62 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Bootstrap-Portfolio</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Basic-Portfolio</a> -->
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="vba" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Stock Analysis (VBA-Project) preview</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="my-4 row">
+                                <div class="col-md-6 px-4">
+                                    <br>
+                                    <h5>VBA script to analyzes stock's data and measured performance.</h5>
+
+                                    <h6>Script contains the following:</h6>
+                                    <ul>
+                                        <li>loops</li>
+                                        <li>if-then statements</li>
+                                        <li>design patterns</li>
+                                        <li>logical and comparison operators</li>
+                                        <li>Use an index to access data in an array</li>
+                                        <li>Nested loops</li>
+                                        <li>Visual and numeric formatting</li>
+                                        <li>Use conditional formatting</li>
+                                        <li>asure code performance.</li>
+                                    </ul>
+                                </div>
+                                <img src="./assets/images/vba0.jpg" class="col-md-5 img">
+                            </div>
+                            <div class="row">
+                                <img src="./assets/images/vba6.png" class="col-md-4 me-4 img">
+                                <img src="./assets/images/vba7.png" class="col-md-4 me-4 img">
+                                <img src="./assets/images/vba1.png" class="col-md-3 img">
+                            </div>
+                            <div class="row mt-4">
+                                <img src="./assets/images/vba2.png" class="col-md-5 me-5 img">
+                                <img src="./assets/images/vba3.png" class="col-md-5 ms-5  img">
+                            </div>
+                            <div class="row mt-4">
+                                <img src="./assets/images/vba4.png" class="col-md-5 me-5 img">
+                                <img src="./assets/images/vba5.png" class="col-md-5 ms-5  img">
+                            </div>
+                            <div class="row mt-4">
+                                <img src="./assets/images/vba4.png" class="col-md-5 me-5 img">
+                                <img src="./assets/images/vba5.png" class="col-md-5 ms-5 img">
+                            </div>
+                            <div class="row mt-4">
+                                <div class="col-md-2"></div>
+                                <img src="./assets/images/vba8.png" alt="" class="img col-md-8">
+                            </div>
                         </div>
                     </div>
                 </div>
