updated Stock Anlysis VBA

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </div>
         </div>
 
-        <div class="modal fade" id="vba" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal hide" id="vba" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -256,24 +256,24 @@
                                         <li>asure code performance.</li>
                                     </ul>
                                 </div>
-                                <img src="./assets/images/vba0.jpg" class="col-md-5 img">
+                                <img src="./assets/images/vba0.jpg" class="col-md-6 img">
                             </div>
                             <div class="row">
                                 <img src="./assets/images/vba6.png" class="col-md-4 me-4 img">
-                                <img src="./assets/images/vba7.png" class="col-md-4 me-4 img">
+                                <img src="./assets/images/vba7.png" class="col-md-4 me-5 img">
                                 <img src="./assets/images/vba1.png" class="col-md-3 img">
                             </div>
                             <div class="row mt-4">
-                                <img src="./assets/images/vba2.png" class="col-md-5 me-5 img">
-                                <img src="./assets/images/vba3.png" class="col-md-5 ms-5  img">
+                                <img src="./assets/images/vba2.png" class="col-md-6 img">
+                                <img src="./assets/images/vba3.png" class="col-md-6 img">
                             </div>
                             <div class="row mt-4">
-                                <img src="./assets/images/vba4.png" class="col-md-5 me-5 img">
-                                <img src="./assets/images/vba5.png" class="col-md-5 ms-5  img">
+                                <img src="./assets/images/vba4.png" class="col-md-6 img">
+                                <img src="./assets/images/vba5.png" class="col-md-6 img">
                             </div>
                             <div class="row mt-4">
-                                <img src="./assets/images/vba4.png" class="col-md-5 me-5 img">
-                                <img src="./assets/images/vba5.png" class="col-md-5 ms-5 img">
+                                <img src="./assets/images/vba4.png" class="col-md-6 img">
+                                <img src="./assets/images/vba5.png" class="col-md-6 img">
                             </div>
                             <div class="row mt-4">
                                 <div class="col-md-2"></div>
