modified VBA Project

--- a/index.html
+++ b/index.html
@@ -239,24 +239,24 @@
                     <div class="modal-body">
                         <div class="container">
                             <div class="my-4 row">
-                                <div class="col-md-6 px-4">
-                                    <br>
-                                    <h5>VBA script to analyzes stock's data and measured performance.</h5>
+                                <div class="vba img fw-bold">
+                                    <div class="img">
+                                        <h4 class="mb-2">Stocks' data analyzed with a VBA script that displays measured performance.</h4>
+                                        <h5 class="fw-bold">Script contains the following:</h5>
+                                        <ul>
+                                            <li>loops</li>
+                                            <li>if-then statements</li>
+                                            <li>design patterns</li>
+                                            <li>logical and comparison operators</li>
+                                            <li>Use an index to access data in an array</li>
+                                            <li>Nested loops</li>
+                                            <li>Visual and numeric formatting</li>
+                                            <li>Use conditional formatting</li>
+                                            <li>asure code performance.</li>
+                                        </ul>
+                                    </div>
 
-                                    <h6>Script contains the following:</h6>
-                                    <ul>
-                                        <li>loops</li>
-                                        <li>if-then statements</li>
-                                        <li>design patterns</li>
-                                        <li>logical and comparison operators</li>
-                                        <li>Use an index to access data in an array</li>
-                                        <li>Nested loops</li>
-                                        <li>Visual and numeric formatting</li>
-                                        <li>Use conditional formatting</li>
-                                        <li>asure code performance.</li>
-                                    </ul>
                                 </div>
-                                <img src="./assets/images/vba0.jpg" class="col-md-6 img">
                             </div>
                             <div class="row">
                                 <img src="./assets/images/vba6.png" class="col-md-4 me-4 img">
@@ -266,10 +266,6 @@
                             <div class="row mt-4">
                                 <img src="./assets/images/vba2.png" class="col-md-6 img">
                                 <img src="./assets/images/vba3.png" class="col-md-6 img">
-                            </div>
-                            <div class="row mt-4">
-                                <img src="./assets/images/vba4.png" class="col-md-6 img">
-                                <img src="./assets/images/vba5.png" class="col-md-6 img">
                             </div>
                             <div class="row mt-4">
                                 <img src="./assets/images/vba4.png" class="col-md-6 img">
