added Finacial Analysis With Python

--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
                     <div class="modal-body">
                         <div class="container-fluid row">
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#vba"
-                                href="#">Stock Analysis (VBA-Project)</a>
+                                href="#">Stock Analysis With VBA</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#python"
+                                href="#">Finacial Analysis With Python</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#leaflet" href="#">Leaflet-Projects</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
@@ -229,7 +231,7 @@
             </div>
         </div>
 
-        <div class="modal hide" id="vba" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="vba" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -274,6 +276,41 @@
                             <div class="row mt-4">
                                 <div class="col-md-2"></div>
                                 <img src="./assets/images/vba8.png" alt="" class="img col-md-8">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="python" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Financial Analysis with Python</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="my-4 row">
+                                <div class="vba python img fw-bold">
+                                    <div class="img">
+                                        <h5 class="mb-2">Created python script with CSV library which provides an automatic analysis in a text format of a bank's data CSV file.</h5>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <h2>Sample Data</h2>
+                                    <img src="./assets/images/python1.png" class="w-100 img">
+                                </div>
+                                <div class="col-md-8" style='text-align: center;margin-left: auto;'>
+                                    <h2 >Analysis</h2>
+                                    <img src="./assets/images/python3.png" style="height:51%;" class='img'>
+                                    <h2 class="text-center">Report</h2>
+                                    <img src="./assets/images/python2.png" style='width:75%' class='img'>
+                                </div>
                             </div>
                         </div>
                     </div>
