modified biodiversity dashboard

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Geerooniimoo.io</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#plotly" href="#">plotly-Projects</a>
+                                data-bs-target="#plotly" href="#">Biodiversity Dashboard with Plotly</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">python-api-Projects</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
@@ -620,7 +620,7 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h3 class="modal-title ms-auto" id="exampleModalLabel">Plotly Dashboard</h3>
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel">Biodiversity Dashboard with Plotly</h3>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -641,9 +641,9 @@
                                 taxonomic units, or OTUs, in the study were present in more than 70% of people, while
                                 the rest were relatively rare.
                             </p>
-                            <div class="row mt-4 bg-dark p-4">
+                            <div class="row mt-4 p-4">
                                 <div class="col-md-2"></div>
-                                <div class="col-md-8"><img src="./assets/images/plotly_1.png" class="w-100" alt="jup_3">
+                                <div class="col-md-12"><img src="./assets/images/plotly_1.png" class="w-100" alt="jup_3">
                                 </div>
                             </div>
                         </div>
