--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">python-api-Projects</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#pandas" href="#">pandas-Projects</a>
+                                data-bs-target="#pandas" href="#">School Data Analysis with Pandas</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
                                 href="#">D3-Projects</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#sqlalchemy" href="#">SQLAlchemy-Projects</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Mission_To_Mars</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#matplotlib" href="#">matplotlib-Projects</a>
+                                data-bs-target="#matplotlib" href="#">Drugs Data Analysis with Matplotlib</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">NFL-RECORDS</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
@@ -198,7 +198,7 @@
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">SpiritualEngineering</a> -->
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">JavaScript-Projects</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
-                                href="#">Web-Design-Projects</a>
+                                href="#">Data Visualization with Bootstrap</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
                                 href="#">Mission_to_Jupiter</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Password-Generator</a>
