modified Analysis with Tableau

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
                                 href="#">SQL-Projects</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#tableau" href="#">Tableau-Project</a>
+                                data-bs-target="#tableau" href="#">CitiBike Data Analysis with Tableau</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">SpiritualEngineering</a> -->
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">JavaScript-Projects</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
@@ -1014,9 +1014,8 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h3 class="modal-title ms-auto" id="exampleModalLabel"><a
-                                href="https://public.tableau.com/app/profile/geronimo.augusto.perez/viz/GroveStationMostActiveDepartureTime/CitiBikeAnalysis?publish=yes">Citi
-                                Bike Analysis In Tableau</a></h3>
+                        <h4 class="modal-title ms-auto" id="exampleModalLabel"><a
+                                href="https://public.tableau.com/app/profile/geronimo.augusto.perez/viz/GroveStationMostActiveDepartureTime/CitiBikeAnalysis?publish=yes" target='_blank'>Website link</a></h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
