edit projects discriptions

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#python"
                                 href="#">Finacial Analysis With Python</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#leaflet" href="#">Leaflet-Projects</a>
+                                data-bs-target="#leaflet" href="#">Map visualizations with Leaflet</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Geerooniimoo.io</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
@@ -179,9 +179,9 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#pandas" href="#">School Data Analysis with Pandas</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
-                                href="#">D3-Projects</a>
+                                href="#">Census data visualizations with D3</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#sqlalchemy" href="#">SQLAlchemy-Projects</a>
+                                data-bs-target="#sqlalchemy" href="#">Climate API with SQLAlchemy</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Mission_To_Mars</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#matplotlib" href="#">Drugs Data Analysis with Matplotlib</a>
@@ -192,7 +192,7 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">VBA-Scripting</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
-                                href="#">SQL-Projects</a>
+                                href="#">Model and analyze data with SQL</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#tableau" href="#">CitiBike Data Analysis with Tableau</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">SpiritualEngineering</a> -->
@@ -200,21 +200,21 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
                                 href="#">Data Visualization with Bootstrap</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
-                                href="#">Mission_to_Jupiter</a>
+                                href="#">Scraping and visualizing Jupiter's data</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Password-Generator</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">FriendFinder</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#gamazon" href="#">Gamazon</a>
+                                data-bs-target="#gamazon" href="#">Node purchansing app with SQL</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">realnewslinks</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">HYBC</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">New-York-Times-API</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri"
-                                href="#">liri-node-app</a>
+                                href="#">Language Interpretation & Recognition Interface (APIs)</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">WeatherForecast</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">GifTastic</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Calender</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#burger" href="#">crudaburger</a>
+                                data-bs-target="#burger" href="#">CRUD SQL data with full stack app</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">porfolio</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">NodeGuessGame</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">TrainScheduler</a>
