--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
                     </div>
                     <div class="modal-body">
                         <div class="container-fluid row">
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#team"
+                                href="#">Teams created with "Nodejs" and tested with "jest"</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#vba"
                                 href="#">Stock Analysis With VBA</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#python"
                                 href="#">Finacial Analysis With Python</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#leaflet" href="#">Map visualizations with Leaflet</a>
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Geerooniimoo.io</a> -->
+                                data-bs-target="#leaflet" href="#">Earthquakes Interactive Visualization</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#plotly" href="#">Biodiversity Dashboard with Plotly</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
@@ -206,7 +206,7 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#gamazon" href="#">Node purchansing app with SQL</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">realnewslinks</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">HYBC</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">HYBC</a>     
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">New-York-Times-API</a> -->
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri"
                                 href="#">Language Interpretation & Recognition Interface (APIs)</a>
@@ -224,7 +224,6 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Responsive-HYBC</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Bootstrap-Portfolio</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Basic-Portfolio</a> -->
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -283,6 +282,38 @@
             </div>
         </div>
 
+        <div class="modal fade" id="team" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title ms-auto" id="exampleModalLabel">Team Generator</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="my-4 row">
+                                <div class="team img fw-bold">
+                                    <div class="img">
+                                        <h3 class="fw-bold">Description:</h3>
+                                        <p>Team Generator is a Nodejs application that with the use of inquirer, File System libraries and Bootstrap CDN creates an HTML file which displays a team of managers, engineers and/or interns.  This application also comes with a constructor test which uses the "jest" library.</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="row mt-4">
+                                <div class="col-md-2"></div>
+                                <img src="./assets/images/team1.png" alt="" class="img col-md-8">
+                            </div>
+                            <div class="row mt-4">
+                                <img src="./assets/images/team2.png" class="col-md-6 img">
+                                <img src="./assets/images/team3.png" class="col-md-6 img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="modal fade" id="python" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
@@ -322,15 +353,24 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Leaflet-Projects preview</h5>
+                        <h1 class="modal-title ms-auto" id="exampleModalLabel">Earthquakes Interactive Dashboard</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="my-4"><img src="./assets/images/leaflet-summary.png" class="w-100" alt="summary">
+                        <div class="container">
+                            <div class="my-4 row">
+                                <div class="leaflet img fw-bold">
+                                    <div class="img">
+                                        <h3 class="fw-bold">Description:</h3>
+                                        <p>Earthquakes Interactive Dashboard is a frontend application that uses the Leaflet CDN for mapping earthquake data from the <a href="http://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php">USGS GeoJSON API</a> and tectonicplates from <a href="https://github.com/fraxen/tectonicplates">fraxen/tectonicplates</a>.  Data markers reflect location, magnitude and depth of the earthquakes.  It allows to turn on/off data points and tectonic plates lines around the globe.  It also provides three differenct types of maps to select from.</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="my-4"><img src="./assets/images/leaflet-map1.png" class="w-100" alt="map1"></div>
+                            <div class="my-4"><img src="./assets/images/leaflet-map2.png" class="w-100" alt="map2"></div>
+                            <div class="my-4"><img src="./assets/images/leaflet-map3.png" class="w-100" alt="map3"></div>
                         </div>
-                        <div class="my-4"><img src="./assets/images/leaflet-map1.png" class="w-100" alt="map1"></div>
-                        <div class="my-4"><img src="./assets/images/leaflet-map2.png" class="w-100" alt="map2"></div>
-                        <div class="my-4"><img src="./assets/images/leaflet-map3.png" class="w-100" alt="map3"></div>
                     </div>
                 </div>
             </div>
