Adding Mars app to projects

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 href="#">Scrape and visualize Jupiter's data with Python</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
                                 href="#">Model and analyze data with SQL language</a>
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Mission_To_Mars</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#mars">Mars current data scraped from NASA's websites with Python</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">NFL-RECORDS</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
@@ -324,6 +324,38 @@
             </div>
         </div>
 
+        <div class="" id="mars" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title ms-auto" id="exampleModalLabel">Mission To Mars</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="my-4 row">
+                                <div class="team img fw-bold">
+                                    <div class="img">
+                                        <h3 class="fw-bold">Description:</h3>
+                                        <p>With the use of Python language </p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="row mt-4">
+                                <div class="col-md-2"></div>
+                                <img src="./assets/images/team1.png" alt="" class="img col-md-8">
+                            </div>
+                            <div class="row mt-4">
+                                <img src="./assets/images/team2.png" class="col-md-6 img">
+                                <img src="./assets/images/team3.png" class="col-md-6 img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <div class="modal fade" id="team" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
