--- a/index.html
+++ b/index.html
@@ -195,13 +195,14 @@
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#burger" href="#">CRUD data safely in SQL server through a Full Stack
                                 Website</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
+                                href="#mars">Mars current data scraped from NASA's websites with Python</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri"
                                 href="#">Language Interpretation & Recognition Interface (APIs)</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
                                 href="#">Scrape and visualize Jupiter's data with Python</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
                                 href="#">Model and analyze data with SQL language</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#mars">Mars current data scraped from NASA's websites with Python</a>
                             <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">NFL-RECORDS</a>
                             <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
@@ -324,7 +325,7 @@
             </div>
         </div>
 
-        <div class="" id="mars" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="mars" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -334,28 +335,33 @@
                     <div class="modal-body">
                         <div class="container">
                             <div class="my-4 row">
-                                <div class="team img fw-bold">
+                                <div class="mars img fw-bold">
                                     <div class="img">
                                         <h3 class="fw-bold">Description:</h3>
-                                        <p>With the use of Python language </p>
+                                        <p>With the use of Python, Flask, HTML and CSS, this application provides the
+                                            latest Mars information scraped from <a
+                                                href="https://mars.nasa.gov/news/">Mars.gov</a>, <a
+                                                href="https://spaceimages-mars.com">JPL Mars Space Images</a>, <a
+                                                href="https://twitter.com/marswxreport?lang=en">Twitter</a>, <a
+                                                href="https://space-facts.com/mars/">Space-Facts.com</a> and <a
+                                                href="https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars">USGS
+                                                Astrogeology site</a>. </p>
                                     </div>
 
                                 </div>
                             </div>
                             <div class="row mt-4">
-                                <div class="col-md-2"></div>
-                                <img src="./assets/images/team1.png" alt="" class="img col-md-8">
-                            </div>
-                            <div class="row mt-4">
-                                <img src="./assets/images/team2.png" class="col-md-6 img">
-                                <img src="./assets/images/team3.png" class="col-md-6 img">
+                                <img src="./assets/images/mars2.png" alt="" class="img col-md-12">
+                                <img src="./assets/images/mars3.png" alt="" class="img col-md-12">
+                                <img src="./assets/images/mars4.png" alt="" class="img col-md-12">
+                                <img src="./assets/images/mars5.png" alt="" class="img col-md-12">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+
         <div class="modal fade" id="team" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
