--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
         </div>
 
-        <h5 class="type"><span id="type">Type here!!!</span><span id="blinker">|</span></h5>
+        <h5 class="type"><span id="type"></span><span id="blinker">|</span></h5>
         <div class="carousel">
             <img class="caroImg" src="./assets/images/bike1.png">
         </div>
