--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                 </svg>
                 <svg id="hours">
                     <g>
-                        <text x='12' y='32' style="fill: gray;stroke:black;">3</text>
-                        <text x='10' y='30' style="fill: white;stroke:black;">3</text>
-                        <text x='30' y='32' style="fill: white;stroke:black;">,</text>
-                        <text x='42' y='32' style="fill: gray;stroke:black;">0</text>
-                        <text x='40' y='30' style="fill: white;stroke:black;">0</text>
-                        <text x='62' y='32' style="fill: gray;stroke:black;">0</text>
-                        <text x='60' y='30' style="fill: white;stroke:black;">0</text>
-                        <text x='82' y='32' style="fill: gray;stroke:black;">0</text>
-                        <text x='80' y='30' style="fill: white;stroke:black;">0</text>
+                        <text x='12' y='35' class="textShadow">3</text>
+                        <text x='10' y='33' class="textLetter">3</text>
+                        <text x='30' y='35' class="textLetter">,</text>
+                        <text x='42' y='35' class="textShadow">0</text>
+                        <text x='40' y='33' class="textLetter">0</text>
+                        <text x='62' y='35' class="textShadow">0</text>
+                        <text x='60' y='33' class="textLetter">0</text>
+                        <text x='82' y='35' class="textShadow">0</text>
+                        <text x='80' y='33' class="textLetter">0</text>
                     </g>
                 </svg>
 
@@ -167,7 +167,7 @@
             </div>
         </div>
 
-        <h5 class="type"><span id="type"></span><span id="blinker">|</span></h5>
+        <h5 class="type"><span id="type"></span><span class="type" id="blinker"></span></h5>
         <div class="carousel">
             <img class="caroImg" src="./assets/images/bike1.png">
         </div>
