arranged images in order

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <a class="text-decoration-none" target="_black"
                             href="https://calendly.com/geronimo-perez/50-minute-tutoring-session-1">
 
-                            <svg width="210" height="145">
+                            <svg width="210" height="145" class="calendar">
                                 <rect x='5' y='5' rx="5" ry="5" width="200" height="130"
                                     style="fill:rgb(245, 245, 245);stroke:rgba(0, 0, 0, 0.295);stroke-width:2;" />
                                 <g>
