Made it mobile responsive

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
         <h5 class="type"><span id="type"></span><span class="type" id="blinker"></span></h5>
         <div class="carousel">
-            <img class="caroImg" src="./assets/images/bike1.png">
+            <img class="caroImg" src="./assets/images/jup_2.png">
         </div>
     </div>
 
