modified hours display

--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
                 </svg>
                 <svg id="hours">
                     <g>
-                        <text x='12' y='35' class="textShadow">3</text>
-                        <text x='10' y='33' class="textLetter">3</text>
-                        <text x='30' y='35' class="textLetter">,</text>
-                        <text x='42' y='35' class="textShadow">0</text>
-                        <text x='40' y='33' class="textLetter">0</text>
-                        <text x='62' y='35' class="textShadow">0</text>
-                        <text x='60' y='33' class="textLetter">0</text>
-                        <text x='82' y='35' class="textShadow">0</text>
-                        <text x='80' y='33' class="textLetter">0</text>
+                        <text x='8' y='40' class="textShadow">3</text>
+                        <text x='2' y='38' class="textLetter">3</text>
+                        <text x='26' y='40' class="textShadow">,</text>
+                        <text x='24' y='38' class="textLetter">,</text>
+                        <text x='34' y='40' class="textShadow">0</text>
+                        <text x='28' y='38' class="textLetter">0</text>
+                        <text x='54' y='40' class="textShadow">0</text>
+                        <text x='48' y='38' class="textLetter">0</text>
+                        <text x='74' y='40' class="textShadow">0</text>
+                        <text x='68' y='38' class="textLetter">0</text>
                     </g>
                 </svg>
 
@@ -167,7 +168,7 @@
             </div>
         </div>
 
-        <h5 class="type"><span id="type"></span><span class="type" id="blinker"></span></h5>
+        <h5 class="type"><span id="type"></span><span id="blinker"></span></h5>
         <div class="carousel">
             <img class="caroImg" src="./assets/images/jup_2.png">
         </div>
