creating action button

--- a/index.html
+++ b/index.html
@@ -167,11 +167,12 @@
                 </div>
             </div>
         </div>
-
-        <h5 class="type"><span id="type"></span><span id="blinker"></span></h5>
-        <div class="carousel">
-            <img class="caroImg" src="./assets/images/jup_2.png">
-        </div>
+    </div>
+    <div class="type"> 
+        <button><h4></h4>press button <br> if you would like to see <br> some of the work we can do together</h4> </button> <span id="type"></span><span id="blinker"></span>
+    </div>
+    <div class="carousel">
+        <img class="caroImg" src="./assets/images/jup_2.png">
     </div>
 
     <!-- Modal -->
