--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <body>
     <div id="topDiv">
         <div class="sessions mb-4">
-            <h4 class="text-center text-white pb-2 fst-italic">Tutored over <span class="hours">
-                <svg class="smoke">
-                    <ellipse class="eli1"></ellipse>
-                    <ellipse class="eli2"></ellipse>
-                </svg>
-                <svg class="fire">
+            <h4 class="text-center text-white pb-2 fst-italic">Tutored over
+                <span class="hours">
+                    <svg class="smoke">
+                        <ellipse class="eli1"></ellipse>
+                        <ellipse class="eli2"></ellipse>
+                    </svg>
+                    <svg class="fire">
                         <circle class="child_10"></circle>
                         <circle class="child_1"></circle>
                         <ellipse class="child_2"></ellipse>
@@ -30,24 +31,24 @@
                         <circle class="child_4"></circle>
                         <ellipse class="child_8"></ellipse>
                         <ellipse class="child_9"></ellipse>
-                </svg>
-                <svg id="hours">
-                    <g>
-                        <text x='8' y='40' class="textShadow">3</text>
-                        <text x='2' y='38' class="textLetter">3</text>
-                        <text x='26' y='40' class="textShadow">,</text>
-                        <text x='24' y='38' class="textLetter">,</text>
-                        <text x='34' y='40' class="textShadow">0</text>
-                        <text x='28' y='38' class="textLetter">0</text>
-                        <text x='54' y='40' class="textShadow">0</text>
-                        <text x='48' y='38' class="textLetter">0</text>
-                        <text x='74' y='40' class="textShadow">0</text>
-                        <text x='68' y='38' class="textLetter">0</text>
-                    </g>
-                </svg>
-
-            </span> hours</h4>
-            
+                    </svg>
+                    <svg id="hours">
+                        <g>
+                            <text x='8' y='40' class="textShadow">3</text>
+                            <text x='2' y='38' class="textLetter">3</text>
+                            <text x='26' y='40' class="textShadow">,</text>
+                            <text x='24' y='38' class="textLetter">,</text>
+                            <text x='34' y='40' class="textShadow">0</text>
+                            <text x='28' y='38' class="textLetter">0</text>
+                            <text x='54' y='40' class="textShadow">0</text>
+                            <text x='48' y='38' class="textLetter">0</text>
+                            <text x='74' y='40' class="textShadow">0</text>
+                            <text x='68' y='38' class="textLetter">0</text>
+                        </g>
+                    </svg>
+                </span>
+                hours
+            </h4>
         </div>
 
         <div id='title' class="bg-dark text-white m-auto">
@@ -58,7 +59,7 @@
         </div>
 
         <div class="accordion accordion-flush" id="accordionExample">
-         
+
 
             <div class="accordion-item">
                 <h2 class="accordion-item" id="headingTwo">
@@ -168,8 +169,10 @@
             </div>
         </div>
     </div>
-    <div class="type"> 
-        <button><h4></h4>press button <br> if you would like to see <br> some of the work we can do together</h4> </button> <span id="type"></span><span id="blinker"></span>
+    <div class="type">
+        <button>
+            <h4></h4>press this button if you would like to see some of the things we can do together.</h4>
+        </button> <span id="type"></span><span id="blinker"></span>
     </div>
     <div class="carousel">
         <img class="caroImg" src="./assets/images/jup_2.png">
