working on text display

--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
         </div>
     </div>
     <div class="type">
-        <button>
-            <h4></h4>press this button if you would like to see some of the things we can do together.</h4>
-        </button> <span id="type"></span><span id="blinker"></span>
+        <p id="type"></p>
     </div>
     <div class="carousel">
         <img class="caroImg" src="./assets/images/jup_2.png">
